Yay!  Fixed the adjax problem with kibitzs.jade

--- a/views/kibitzs.jade
+++ b/views/kibitzs.jade
@@ -1,9 +1,8 @@
-div.conent
+div(id="kibitzs")
     div.row
         div.span12
             h2 Kibitz list:
             each kibItem in kibItems
                 li #{kibItem.from} says #{kibItem.text}
                 
-                
-I like eggs
+
